Archive2/a8/00f1c0ac0a208d/output
main.cpp: In function 'void foo(const int&)':
main.cpp:5:31: error: invalid use of const_cast with type 'int', which is not a pointer, reference, nor a pointer-to-data-member type
     int& z = const_cast<int>(y);
                               ^
